kubernetes/staging/main/service/apps/emqx/cluster/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${CLOUDFLARE_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: "${CLOUDFLARE_SUBDOMAIN}.${CLOUDFLARE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-websocket
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${CLOUDFLARE_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: "${CLOUDFLARE_MQTT_SUBDOMAIN}.${CLOUDFLARE_DOMAIN}"
      http:
        paths:
          - path: /mqtt
            pathType: Exact
            backend:
              service:
                name: emqx-listeners
                port:
                  number: 8083
